# zbdump

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  zbdump.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docker/initdb/: 001_fixture.sql
tests/: test_cli.py  test_integration.py  test_renderer.py
