[project]
name = "zbdump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "psycopg>=3.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
target-version = "py312"  # set this to match your project's minimum Python

[tool.ruff.lint]
extend-select = ["I", "UP"]
